testfiles/advanced_tests/SemanticErrors/incompatibleTypes1ASTVisual.dot
digraph AST {
  "126405676746400" [label="Start"];
  "126405676746400" -> "126405676753072";
  "126405676753072" [label="Code"];
  "126405676753072" -> "126405676754656";
  "126405676754656" [label="Function"];
  "126405676754656" -> "126405676746688";
  "126405676754656" -> "126405676759648";
  "126405676746688" [label="main"];
  "126405676759648" [label="Code"];
  "126405676759648" -> "126405676756816";
  "126405676759648" -> "126405672687152";
  "126405676759648" -> "126405672683600";
  "126405676759648" -> "126405672691520";
  "126405676759648" -> "126405672695744";
  "126405676756816" [label="Declaration"];
  "126405676756816" -> "126405676759792";
  "126405676759792" [label="x"];
  "126405672687152" [label="Assignment"];
  "126405672687152" -> "126405672686144";
  "126405672687152" -> "126405672688736";
  "126405672686144" [label="x"];
  "126405672688736" [label="Conversion"];
  "126405672688736" -> "126405672686672";
  "126405672688736" -> "126405672691184";
  "126405672686672" [label="Type"];
  "126405672686672" -> "126405672688112";
  "126405672688112" [label="INT"];
  "126405672691184" [label="'f'"];
  "126405672683600" [label="Assignment"];
  "126405672683600" -> "126405672692288";
  "126405672683600" -> "126405672687008";
  "126405672692288" [label="x"];
  "126405672687008" [label="Conversion"];
  "126405672687008" -> "126405672690128";
  "126405672687008" -> "126405672684944";
  "126405672690128" [label="Type"];
  "126405672690128" -> "126405672696272";
  "126405672696272" [label="INT"];
  "126405672684944" [label="'¤'"];
  "126405672691520" [label="Assignment"];
  "126405672691520" -> "126405672687824";
  "126405672691520" -> "126405672696224";
  "126405672687824" [label="x"];
  "126405672696224" [label="Conversion"];
  "126405672696224" -> "126405672696608";
  "126405672696224" -> "126405672689216";
  "126405672696608" [label="Type"];
  "126405672696608" -> "126405672683984";
  "126405672683984" [label="INT"];
  "126405672689216" [label="'å'"];
  "126405672695744" [label="Assignment"];
  "126405672695744" -> "126405672682112";
  "126405672695744" -> "126405672681680";
  "126405672682112" [label="x"];
  "126405672681680" [label="Conversion"];
  "126405672681680" -> "126405672693776";
  "126405672681680" -> "126405672684464";
  "126405672693776" [label="Type"];
  "126405672693776" -> "126405672682928";
  "126405672682928" [label="INT"];
  "126405672684464" [label="\000"];
}
